--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
 			}
 		],
 		"paths": {
+			"@app/*": ["./app/*"],
 			"@styles/*": ["./styles/*"],
 			"@components/*": ["./components/*"],
 			"@constants/*": ["./constants/*"],
